--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,3 +35,15 @@ body {
 .dark .post-content a {
   color: red;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0.281);
+}
+
+/* Handle on hover  */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
